# gtk4_base

./: CMakeLists.txt  default_ball_api.c  default_ball_api.h  game_clock.c  main.c  plugins.c  plugins.h  pong.c  pong.h  pong_api.c  state_machine.c  state_machine.h
include/: CMakeLists.txt  game_clock.h  pong_api.h
plugins/: CMakeLists.txt
plugins/plugin-one/: CMakeLists.txt  plugin-one.c
plugins/plugin-two/: CMakeLists.txt  plugin-two.c
